# CMake_tutorial

./: README.md
CMAKE-GOOD/: CMakeLists.txt  main.cpp
Cmake_EP1/: CMakeLists.txt  main.cpp
Cmake_EP1/make_tutorial/: main.cpp  out
Cmake_EP2/: .gitignore  CMakeLists.txt  main.cpp
Cmake_EP2/Adder/: adder.cpp
Cmake_EP3/: CMakeLists.txt  main.cpp
Cmake_EP4/: CMakeLists.txt  YGconfig.h.in  build.sh  main.cpp
Cmake_EP5/: .gitignore  CMakeLists.txt  YGconfig.h.in  main.cpp
Cmake_EP5/Adder/: CMakeLists.txt
Cmake_EP6/: CMakeLists.txt  main.cpp
Cmake_EP6/Adder/: CMakeLists.txt
Cmake_EP7/: CMakeLists.txt  install.sh  main.cpp  readme.md
Cmake_EP8/: CMakeLists.txt  License.txt  main.cpp
Cmake_EP9/: configure.sh  run.sh
cmake_test/: usa.c
cmake_test/makefile_ex/: kor.c  main.c  makefile_copy  makefile_copy2
how-to-cmake-good-0b/: CMakeLists.txt
